# diabetes-brfss-eda

./: .gitignore  Diabetes_Health_Analysis_Report.html  README.md  analysis.ipynb  diabetes_health_indicators_eda.ipynb  pyproject.toml
docs/: DATASET.md  METHODOLOGY.md
