[project]
name = "diabetes-brfss-eda"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaliyah Harper",email = "aeverly14@pm.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
